--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ Player Capture The Flag Challenges, I Speak C/c++,HTML,JS,VB,SQL, And Python.</p
 <p>I work as a Technician HelpDesk IT Solutions at <a href="http://atos.net/en-us/home.html">ATOS Morocco</a> and as an Independant Security Researcher For 0day Exploits At <a href="http://www.zerodayinitiative.com/">Zero Day Initiative</a> and Bugs Hunting At <a href="https://hackerone.com/">HackerOne</a> and <a href="https://bugcrowd.com/">BugCrowd</a> & <a href="https://internetbugbounty.org/">The Internet Bug Bounty</a>.</p>
 <p>The following list contains some of the companies I have collaborated with, and they included me in their security  acknowledgements page for reporting valid security issues:</p><br><ul style="list-style-type:circle">
 <br>  <li>Google Company : <a href="https://www.google.com/about/appsecurity/hall-of-fame/distinction/"> Google HALL OF FAME </a></li>
-<br>  <li>Python Company : <a href="http://bugs.python.org">Python Aknowledgment</a></li>
+<br>  <li>Python Company : <a href="http://bugs.python.org">Python Fixed Issue</a></li>
 <br>  <li>Microsoft Company : <a href="https://technet.microsoft.com/en-us/security/cc308575">Microsoft HALL OF FAME</a></li>
 <br>  <li>IBM Company : <a href="http://www-01.ibm.com/support/docview.wss?uid=swg21975358">IBM 0Day Exploits (CVE-2016-0212, CVE-2016-0213, CVE-2016-0216) :</a></li>
 <br><ul><li>National Vulnerability Database : <a href="https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-0212">  CVE-2016-0212 </a></li>
