--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ At <a href="http://www.zerodayinitiative.com/">Trend Micro's Zero Day Initiative
 <br>If you would like to get in touch with me, whether it be for tech support, a professional work, or to just say hello, feel free to contact me any time.
 <br>
 @Email : <a href="mailto:soufiane.boussali@protonmail.ch">soufiane.boussali@efet.ac.ma</a><br>
-Facebook: <a href="https://facebook.com/soufian.ckin2u">Soufian Boussali</a><br>
+Facebook: <a href="https://web.facebook.com/s0uf14n3">Soufian Boussali</a><br>
 Twitter: <a href="https://twitter.com/soufian_hamada">@soufian_hamada</a><br>
 Github: <a href="https://github.com/MrMugiwara">Soufiane Boussali</a><br>
 </p><p>
