--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ At <a href="www.trendmicro.com/">Trend Micro's Zero Day Initiative</a> and as an
 Facebook: <a href="https://web.facebook.com/s0uf14n3B0uss4l1">Soufian Boussali</a><br>
 Twitter: <a href="https://twitter.com/soufian_hamada">@soufian_hamada</a><br>
 Github: <a href="https://github.com/MrMugiwara">Soufiane Boussali</a><br>
-Paypal : <a href="https://paypal.me/boussalisoufiane">PayPal</a><br>
+Donate : <a href="https://paypal.me/boussalisoufiane">PayPal</a><br>
 </p><p>
 <br>Regards, Crdt, Pozdrawiam,</p>
 <br>By Soufiane Boussali. |</p>
