--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@ Player Capture The Flag Challenges, I Speak C/c++,HTML,JS,VB,SQL, And Python.</p
 <p>Iv'e studied Computer Networks and Systems Engineering at EFET institut<br>Actually i work as an Analyst IT Support at <a href="http://atos.net/en-us/home.html">ATOS Morocco</a> and IT Security Analyst 
 At <a href="www.trendmicro.com/">Trend Micro's Zero Day Initiative</a> and as an Independant Bugs Hunting At <a href="https://hackerone.com/">HackerOne</a> and <a href="https://bugcrowd.com/">BugCrowd</a> & <a href="https://internetbugbounty.org/">The Internet Bug Bounty</a>.</p>
 <p>The following list contains some of the companies I have collaborated with, and they included me in their security  acknowledgements page for reporting valid security issues:</p><br><ul style="list-style-type:circle">
+<br>  <li>Apple Company : <a href="https://bugreport.apple.com/web/?problemID=29132470"> Multiple Vulnerabilities for Apple (iOS 10.1.x Remote memory corruption / Denial Of Service / code injection webkit / webarchive File information Disclosure)</a></li>
 <br>  <li>Google Company : <a href="https://www.google.com/about/appsecurity/hall-of-fame/distinction/"> Google HALL OF FAME </a></li>
 <br>  <li>Python Company : <a href="http://bugs.python.org">Python Fixed Issue</a></li>
 <br>  <li>Microsoft Company : <a href="https://technet.microsoft.com/en-us/security/cc308575">Microsoft HALL OF FAME</a></li>
